--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Google tag (gtag.js) -->
+		<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-NW4SFNN52Y"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-NW4SFNN52Y');
+		</script>
     <meta charset="utf-8">
-    <title>Enter your name</title>
+    <title>Calender</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
